Cycles: point cloud geometry renders with incorrect normals when object is rotated #94251

Closed
opened 2021-12-19 15:15:55 +01:00 by RoyTheKoi · 5 comments

System Information
Operating system: macOS Big Sur 11.2.3
CPU: 2.3 GHz 8-Core Intel Core i9
Graphics card: AMD Radeon Pro 5500M 8 GB

Blender Version
Broken: 3.1 Alpha, 214a56ce8c, master, 2020-12-17

Short description of error
The normals of points rendered with Cycles are warped when the object is rotated. This also affects the rendering of BSDF shaders as shown in the screenshots below. The issue occurs for point cloud objects as well as for points generated by geometry nodes on any object.

(Everything here was rendered with the CPU)

Points on three different objects (diffuse, glossy, world normals) Cycles_point_cloud_normals_screenshot_1.png
The same three objects rotated by about 100 degrees on the Z axis Cycles_point_cloud_normals_screenshot_22.png
Viewport normal pass Cycles_point_cloud_normals_screenshot_22_normal_pass.png
Note that the effect is only seen in the viewport, or when rendering with motion blur enabled. If motion blur is disabled, F12 renders seem to use correct normals.
The following video was rendered with motion blur enabled to demonstrate the issue. The Z rotation of the three objects is animated with keyframes from 0 to 360 degrees.
Cycles_point_cloud_normals_animation.mp4
Exact steps for others to reproduce the error
Cycles_point_cloud_normals.blend
Open the attached blend file and observe the warped normals of the point cloud geometry, or:

  1. Create an object with points, e.g. by using the experimental point cloud object, or by generating points with geometry nodes
  2. Set the render engine to Cycles
  3. In the shading dropdown of the 3d view, set the render pass to "Normal"
  4. Rotate the object
  5. Notice the normals become warped.
  6. Optionally, to see this in an F12 render, just render with motion blur enabled.
**System Information** Operating system: macOS Big Sur 11.2.3 CPU: 2.3 GHz 8-Core Intel Core i9 Graphics card: AMD Radeon Pro 5500M 8 GB **Blender Version** Broken: 3.1 Alpha, 214a56ce8c67, master, 2020-12-17 **Short description of error** The normals of points rendered with Cycles are warped when the object is rotated. This also affects the rendering of BSDF shaders as shown in the screenshots below. The issue occurs for point cloud objects as well as for points generated by geometry nodes on any object. (Everything here was rendered with the CPU) *Points on three different objects (diffuse, glossy, world normals)* ![Cycles_point_cloud_normals_screenshot_1.png](https://archive.blender.org/developer/F12763387/Cycles_point_cloud_normals_screenshot_1.png) *The same three objects rotated by about 100 degrees on the Z axis* ![Cycles_point_cloud_normals_screenshot_22.png](https://archive.blender.org/developer/F12763383/Cycles_point_cloud_normals_screenshot_22.png) *Viewport normal pass* ![Cycles_point_cloud_normals_screenshot_22_normal_pass.png](https://archive.blender.org/developer/F12763431/Cycles_point_cloud_normals_screenshot_22_normal_pass.png) Note that the effect is only seen in the viewport, or when rendering with motion blur enabled. If motion blur is disabled, F12 renders seem to use correct normals. The following video was rendered with motion blur enabled to demonstrate the issue. The Z rotation of the three objects is animated with keyframes from 0 to 360 degrees. [Cycles_point_cloud_normals_animation.mp4](https://archive.blender.org/developer/F12763429/Cycles_point_cloud_normals_animation.mp4) **Exact steps for others to reproduce the error** [Cycles_point_cloud_normals.blend](https://archive.blender.org/developer/F12763478/Cycles_point_cloud_normals.blend) Open the attached blend file and observe the warped normals of the point cloud geometry, or: 1. Create an object with points, e.g. by using the experimental point cloud object, or by generating points with geometry nodes 2. Set the render engine to Cycles 3. In the shading dropdown of the 3d view, set the render pass to "Normal" 4. Rotate the object 5. Notice the normals become warped. 6. Optionally, to see this in an F12 render, just render with motion blur enabled.
Author

Added subscriber: @RoyTheKoi

Added subscriber: @RoyTheKoi

This issue was referenced by blender/cycles@40683f13c2

This issue was referenced by blender/cycles@40683f13c2b3978fe6812a44dcf82adb4585f330

This issue was referenced by edb3ab0617

This issue was referenced by edb3ab061730aa1369298eb510331e6536c82a04

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-12-20 15:05:03 +01:00
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#94251
No description provided.