Fix T94251: Cycles wrong pointcloud normal for instanced objects

Refactor code a bit also so we need to do fewer matrix transforms for shader
data setup of points and curves.