intern/cycles/kernel/geom/point_intersect.h
@@ -104,17 +104,12 @@ ccl_device_inline void point_shader_setup(KernelGlobals kg,
   sd->v = isect->v;
 #  endif
 
-  /* Computer point center for normal. */
+  /* Compute point center for normal. */
   float3 center = float4_to_float3((isect->type & PRIMITIVE_MOTION) ?
                                        motion_point(kg, sd->object, sd->prim, sd->time) :
                                        kernel_tex_fetch(__points, sd->prim));
-
   if (!(sd->object_flag & SD_OBJECT_TRANSFORM_APPLIED)) {
-    const Transform tfm = object_get_transform(kg, sd);
-
-#  ifndef __KERNEL_OPTIX__
-    center = transform_point(&tfm, center);
-#  endif
+    object_position_transform_auto(kg, sd, &center);
   }
 
   /* Normal */
